loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:6: error: illegal start of simple expression
  else {droite()}
  ^