loopdowhile.Poucet1.scala.code
var nbPas:Int = 0
while (sortieTrouvee()==false) {
  nbPas=0
  for ( a <- 1 to 5) { avance();if (estSurBiscuit) {nbPas=nbPas+1}}
  if (nbPas>2 {gauche()})
  else {droite()}
}
avance()